--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=GSMSim
-version=1.0.19
-author=Erdem Arslan
+name=gsm_a6
+version=1.0
+author=Denis Istomin
 maintainer=Erdem Arslan <erdemsaid@gmail.com>
 sentence=A library which manages GSM modules.
-paragraph=Call any number, send sms, read sms, connect to internet, sync time, send email over smtp and gmail, open radio (Sim800L and Sim800H only). Some functions may not work every gsm module.
+paragraph=Call any number, get_call, DTMF send sms, read sms. Some functions may not work every gsm module.
 category=Communication
-url=https://github.com/erdemarslan/GSMSim
+url=https://github.com/dddist/gsm_a6/
 architectures=*
